# ddhelper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  edgecases.txt  issues.txt  rules.txt  todo.md
bridge/: CMakeLists.txt
bridge/bridge/: ImageCapture.hpp  Mouse.hpp  capture.hpp
bridge/src/: GameWindow.cpp  ImageCapture.cpp  Mouse.cpp  bridge.cpp  capture.cpp  captureTest.cpp
engine/: CMakeLists.txt  boss_stats.txt
engine/deprecated/engine/: Dungeon.hpp  Grid.hpp  PositionedVector.hpp
engine/deprecated/src/: Dungeon.cpp
engine/deprecated/test/: testDungeon.cpp
engine/engine/: Boss.hpp  Clamp.hpp  Combat.hpp  ConstExprMap.hpp  Conversion.hpp  Defence.hpp  Dungeon.hpp  DungeonInfo.hpp  DungeonSetup.hpp  Experience.hpp  Faith.hpp  GlowingGuardian.hpp  GodsAndBoons.hpp  Grid.hpp  Hero.hpp  HeroClass.hpp  HeroStats.hpp  HeroStatus.hpp  HeroTraits.hpp  Inventory.hpp  Items.hpp  Jehora.hpp  Magic.hpp  Monster.hpp  MonsterStats.hpp  MonsterStatus.hpp  MonsterTraits.hpp  MonsterTypes.hpp  NamedType.hpp  Outcome.hpp  PietyChange.hpp  PositionedVector.hpp  Preparations.hpp  Resources.hpp  Spells.hpp  StrongTypes.hpp
engine/include/: Combat.hpp  Conversion.hpp  Defence.hpp  Dungeon.hpp  Experience.hpp  Faith.hpp  GameState.hpp  GlowingGuardian.hpp  GodsAndBoons.hpp  Grid.hpp  Hero.hpp  HeroClass.hpp  HeroStats.hpp  HeroStatus.hpp  HeroTraits.hpp  Inventory.hpp  Items.hpp  Jehora.hpp  Magic.hpp  Monster.hpp  MonsterStats.hpp  MonsterStatus.hpp  MonsterTraits.hpp  MonsterTypes.hpp  Outcome.hpp  Resources.hpp  Spells.hpp
engine/src/: Boss.cpp  Combat.cpp  Conversion.cpp  DDHelperTest.cpp  Defence.cpp  Dungeon.cpp  DungeonInfo.cpp  DungeonSetup.cpp  Experience.cpp  Faith.cpp  GlowingGuardian.cpp  Hero.cpp  HeroStats.cpp  Inventory.cpp  Jehora.cpp  Magic.cpp  Monster.cpp  MonsterStats.cpp  MonsterStatus.cpp  MonsterTraits.cpp  MonsterTypes.cpp  Outcome.cpp  PietyChange.cpp  Preparations.cpp  Resources.cpp  Spells.cpp
engine/test/: main.cpp  testCombat.cpp  testDefence.cpp  testDungeon.cpp  testExperience.cpp  testFaith.cpp  testInventory.cpp  testItems.cpp  testMonsters.cpp  testPotions.cpp  testResources.cpp  testSpells.cpp  testStatusEffects.cpp  testTraits.cpp
importer/: CMakeLists.txt
importer/importer/: GameWindow.hpp  ImageCapture.hpp  ImageProcessor.hpp  ImportedState.hpp  Mouse.hpp  PixelAdapters.hpp  testimporter.hpp.in
importer/src/: GameWindow.cpp  ImageCapture.cpp  ImageProcessor.cpp  ImportedState.cpp  Mouse.cpp  captureTest.cpp  importer.cpp  testimporter.cpp
include/: Attack.hpp  AttackBehaviour.hpp  BaseStats.hpp  Combat.hpp  Defence.hpp  Dungeon.hpp  Experience.hpp  ExperienceInterface.hpp  Faith.hpp  Hero.hpp  HeroClass.hpp  HeroStats.hpp  HeroStatus.hpp  HeroTraits.hpp  ImguiApp.hpp  Inventory.hpp  ItemClass.hpp  Items.hpp  Jehora.hpp  Melee.hpp  Monster.hpp  MonsterFactory.hpp  MonsterStats.hpp  MonsterStatus.hpp  MonsterTraits.hpp  Outcome.hpp  PositionedVector.hpp  Spells.hpp  optional.hpp
solver/: CMakeLists.txt  ideas.txt
solver/include/: GameState.hpp  Resources.hpp  Scenario.hpp  Solution.hpp  Solver.hpp  SolverTools.hpp
solver/solver/: Fitness.hpp  GameState.hpp  Heuristics.hpp  Scenario.hpp  Solution.hpp  Solver.hpp  SolverTools.hpp
solver/src/: Fitness.cpp  GeneticAlgorithm.cpp  Heuristics.cpp  Scenario.cpp  Solution.cpp  Solver.cpp  SolverTools.cpp  TreeSearch.cpp  testsolve.cpp
src/: Attack.cpp  BaseStats.cpp  Combat.cpp  DDHelper.cpp  DDHelperTest.cpp  Defence.cpp  Dungeon.cpp  Experience.cpp  Faith.cpp  Hero.cpp  HeroStats.cpp  ImguiApp.cpp  ImguiAppVulkan.cpp  Inventory.cpp  ItemClass.cpp  Melee.cpp  Monster.cpp  MonsterFactory.cpp  MonsterStats.cpp  MonsterStatus.cpp  MonsterTraits.cpp  MonsterTypes.cpp  Spells.cpp  main.cpp
ui/: CMakeLists.txt
ui/include/: Arena.hpp  HeroSelection.hpp  History.hpp  ImguiApp.hpp  MonsterPool.hpp  MonsterSelection.hpp  Preparations.hpp  ResourcesUI.hpp  Scenario.hpp  State.hpp  Utils.hpp
ui/src/: Arena.cpp  DDHelper.cpp  HeroSelection.cpp  History.cpp  ImguiAppOpenGL.cpp  ImguiAppVulkan.cpp  MonsterPool.cpp  MonsterSelection.cpp  Resources.cpp  ResourcesUI.cpp  RunHeuristics.cpp  RunImporter.cpp  RunSolver.cpp  Scenario.cpp  State.cpp  Utils.cpp
ui/ui/: Arena.hpp  HeroSelection.hpp  History.hpp  ImguiApp.hpp  MonsterPool.hpp  MonsterSelection.hpp  Resources.hpp  RunHeuristics.hpp  RunImporter.hpp  RunSolver.hpp  State.hpp  Utils.hpp
